2005-01-31  Nick Clifton  <nickc@redhat.com>

	* confg.bfd: Make targets scheduled for obsoletion (m68k-lynxos,
	sparc-lynxos, vax-vms) be obsolete.

2005-01-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* elf-bfd.h (struct elf_backend_data): Add minpagesize.
	* elf32-arm.c (ELF_MINPAGESIZE): Define.
	* elf32-ppc.c (ELF_MINPAGESIZE): Define.
	* elfcode.h (elf_object_p): Use minpagesize instead of
	maxpagesize.
	* elfxx-target.h (ELF_MINPAGESIZE): Default to ELF_MAXPAGESIZE.
	(elfNN_bed): Include ELF_MINPAGESIZE.

2005-01-28  Julian Brown  <julian@codesourcery.com>

	* bin-in.h (bfd_elf32_arm_set_target_relocs): Update prototype.
	* bin-in2.h (bfd_elf32_arm_set_target_relocs): Update prototype.
	* elf32-arm.c (elf32_arm_link_hash_table): Add fix_v4bx flag.
	(bfd_elf32_arm_set_target_relocs): Add formal parameter fix_v4bx for
	passing flag value from ld. Set flag value in global hash table entry. 
	(elf32_arm_final_link_relocate): Add code to implement R_ARM_V4BX
	relocation. 

2005-01-27  Andrew Cagney  <cagney@gnu.org>

	* configure: Regenerate to track ../gettext.m4 change.

2005-01-25  Mark Mitchell  <mark@codesourcery.com>

	* elf32-arm.c (elf_backend_default_use_rela_p): Define to zero for
	SymbianOS. 

2005-01-25  Alexandre Oliva  <aoliva@redhat.com>

	2004-12-10  Alexandre Oliva  <aoliva@redhat.com>
	* elf32-frv.c (elf32_frv_relocate_section): Force local binding
	for TLSMOFF.
	* reloc.c: Add R_FRV_TLSMOFF.
	* elf32-frv.c (elf32_frv_howto_table): Likewise.
	(frv_reloc_map, frv_reloc_type_lookup): Map it.
	(elf32_frv_relocate_section): Handle it.
	(elf32_frv_check_relocs): Likewise.
	* libbfd.h, bfd-in2.h: Rebuilt.
	2004-11-26  Alexandre Oliva  <aoliva@redhat.com>
	* elf32-frv.c (_frvfdpic_emit_got_relocs_plt_entries): Don't crash
	when given an undefweak TLS symbol.  Fix constant TLS PLT entries
	such that they return the constant in gr9.
	(_frvfdpic_relax_tls_entries): Don't crash for undefweak TLS
	symbols.